inserted French contents

--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -96,12 +96,7 @@
 				Notice Statement</a>.</strong></p>
 
 				<h2><a>E-mail</a></h2>
-				<p><strong>IMPORTANT:</strong> For reasons of security and privacy, we ask
-					you not to send us any personal information such as your Social Insurance
-					Number (<acronym title="Social Insurance Number">SIN</acronym>), home or business address, or departmentally-assigned case
-					or file numbers. We would also like you to be aware that we cannot forward
-					e-mail messages on your behalf and that we cannot accept and process changes
-					of address.</p>
+				<p><strong>IMPORTANT:</strong> For reasons of security and privacy, we ask you not to send us any personal information such as your Social Insurance Number (<acronym title="Social Insurance Number">SIN</acronym>), home or business address, or departmentally-assigned case or file numbers. We would also like you to be aware that we cannot forward e-mail messages on your behalf and that we cannot accept and process changes of address.</p>
 				<p>You can submit your questions and/or comments directly to <br />
 					<a href="mailto:egd-cse@pwgsc-tpsgc.gc.ca">egd-cse@pwgsc-tpsgc.gc.ca</a> </p>
 				<h2>Form</h2>
