--- a/cn-cu-fra.html
+++ b/cn-cu-fra.html
@@ -92,11 +92,14 @@
 						de notre <a href="#con-pri">&Eacute;nonc&eacute; de confidentialit&eacute;</a>.</strong></p>
 
 				<h2>Par courriel</h2>
-				<p>Demandes g&eacute;n&eacute;rales&nbsp;: <br />
+				
+				<p><strong>AVIS IMPORTANT</strong>&nbsp;: Pour des raisons de s&eacute;curit&eacute; et de confidentialit&eacute;, nous vous demandons de ne pas nous envoyer de renseignements personnels comme votre num&eacute;ro d'assurance sociale (NAS), votre adresse domiciliaire ou professionnelle ou le num&eacute;ro de dossier assign&eacute; par le service. Nous souhaitons &eacute;galement vous aviser que nous ne sommes pas en mesure de transf&eacute;rer des courriels en votre nom et que nous ne pouvons pas accepter et traiter des changements d'adresse. </p>
+				<p>Vous pouvez soumettre vos questions et/ou commentaires directement &agrave;&nbsp;: <br />
 					<a href="mailto:cse-egd@tpsgc-pwgsc.gc.ca">cse-egd@tpsgc-pwgsc.gc.ca</a> </p>
 				<h2>Par formulaire</h2>
 				<p>Pour obtenir une r&eacute;ponse par voie &eacute;lectronique, veuillez
-					indiquer votre adresse &eacute;lectronique. </p>
+					indiquer votre adresse &eacute;lectronique.<br />
+					<strong>Veuillez prendre note</strong> que tous les renseignements personnels recueillis dans le pr&eacute;sent formulaire sont prot&eacute;g&eacute;s en vertu de la <a href="http://laws-lois.justice.gc.ca/fra/lois/P-21/index.html">Loi sur la protection des renseignements personnels</a>.</p>
 				<form method="post" action="/cgi-bin/generic_email.pl" id="clfcontactform">
 					<p>
 					<!-- une adresse qui commence avec http:// est requise pour afficher la page de confirmation -->
