--- a/services-fra.html
+++ b/services-fra.html
@@ -88,69 +88,45 @@
 					Services
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<p>La Cale s&egrave;che d'Esquimalt est une entreprise dynamique de r&eacute;paration
-					navale desservant une client&egrave;le nationale et internationale et fonctionnant
-					24&nbsp;heures sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e.</p>
+				<p>Nous offrons des services complets de bassin de radoub &agrave; une client&egrave;le nationale et internationale 24&nbsp;heures par jour, sept jours par semaine et 365&nbsp;jours par ann&eacute;e.</p>
 
-         <h2>Pumphouse</h2>
+         <h2>Station de pompage</h2>
 
-          <p>
-          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at&nbsp;250-363-3768&nbsp;or the pumphouse floor at&nbsp;250-363-3788.
-          </p>
+          <p>Le personnel de la station de pompage est responsable du remplissage et de la purge du bassin, de l'alimentation en &eacute;lectricit&eacute;, de l'air comprim&eacute;, des eaux us&eacute;es et de l'eau douce. Pour de plus amples renseignements, veuillez communiquer avec le superviseur de la station de pompage au 250-363-3768&nbsp;ou avec le service de la station de pompage au 250-363-3788.</p>
           <img src="images/pompe-pump.jpg" width="295" height="152" alt="" />
 
-          <h2>Electrical</h2>
+          <h2>&Eacute;lectricit&eacute;</h2>
 
-          <p>
-          For up to date electrical services please contact the electrical supervisor at&nbsp;250-363-3991.
-          </p>
+          <p>Pour conna&icirc;tre les services d'&eacute;lectricit&eacute; &agrave; jour, veuillez communiquer avec le superviseur en &eacute;lectricit&eacute; au 250-363-3991.</p>
 
-          <h2>Yard</h2>
+          <h2>Cour de triage</h2>
 
-          <p>
-          The yard staff provides a variety of services including keel block setting, assisting with the docking and undocking of vessels, maintaining the grounds and oil spill response.
-          </p>
+          <p>Le personnel de la cour de triage fournit une diversit&eacute; de services, y compris la mise en place de tin, l'aide &agrave; la mise en cale s&egrave;che et &agrave; la remise &agrave; flot des navires, la maintenance des lieux et l'intervention en cas de d&eacute;versement d'hydrocarbures.</p>
           <img src="images/personnel-staff.jpg" width="300" height="225" alt="" />
 
-          <h2>Crane</h2>
+          <h2>Grue</h2>
 
-          <p>
-          Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7&nbsp;tonne Tower Crane on the South Jetty, and 3&nbsp;mobile cranes.
-          </p>
+          <p>Nos clients sont desservis par trois ponts roulants &eacute;lectriques sur rails pour charges lourdes, par une grue &agrave; tour de 7&nbsp;tonnes sur la jet&eacute;e Sud, ainsi que par trois grues mobiles.</p>
 
-          <p>Cranes at EGD&nbsp;:</p>
+          <p>Grues au bassin de radoub d'Esquimalt&nbsp;:</p>
 
           <img src="images/grue-crane.jpg" width="193" height="280" alt="" style="float: right; padding-left: 10px;" />
 
-          <p>
-          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> &ndash; 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
-          </p>
+          <p><strong>Grue &agrave; port&eacute;e variable Krupp de 150&nbsp;tonnes (1982)</strong>&nbsp;&ndash;&nbsp;capacit&eacute; de 150&nbsp;tonnes &agrave; 35&nbsp;m&egrave;tres et de 100&nbsp;tonnes &agrave; 50&nbsp;m&egrave;tres. Cette grue est munie d'un crochet principal capable de lever des navires entiers jusque sur la terre aux fins de radoub et de r&eacute;paration, ainsi qu'un crochet auxiliaire poss&eacute;dant une capacit&eacute; de 15&nbsp;tonnes habituellement utilis&eacute; pour transporter des mat&eacute;riaux jusque sur les navires. Elle est situ&eacute;e sur le c&ocirc;t&eacute; Nord du bassin et est tr&egrave;s utile pour r&eacute;pondre aux besoins de nos clients pour des navires accost&eacute;s au quai de d&eacute;barquement Nord.</p>
 
-          <p>
-          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> &ndash; This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
-          </p>
+          <p><strong>Grue &agrave; port&eacute;e variable Ebco de 30&nbsp;tonnes (1984)</strong>&nbsp;&ndash;&nbsp;Cette grue &agrave; man&oelig;uvre rapide peut &ecirc;tre d&eacute;plac&eacute;e d'un bout &agrave; l'autre du bassin et poss&egrave;de une capacit&eacute; de 30&nbsp;tonnes &agrave; 35&nbsp;m&egrave;tres.</p>
 
-          <p>
-          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> &ndash; The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
-          </p>
+          <p><strong>Grue &agrave; port&eacute;e variable Konecrane de 30&nbsp;tonnes (2010)</strong>&nbsp;&ndash;&nbsp;La plus r&eacute;cente de nos grues sur rails poss&egrave;de une port&eacute;e de 42&nbsp;m&egrave;tres. Cette grue peut parcourir toute la distance du c&ocirc;t&eacute; Sud du bassin de radoub.</p>
 
-          <p>
-          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of EGD and can service vessels berthed at the South Jetty.
-          </p>
+          <p><strong>La grue &agrave; tour Pecco de 7&nbsp;tonnes</strong> est situ&eacute;e sur la jet&eacute;e Sud du bassin de radoub d'Esquimalt et peut desservir les navires accost&eacute;s &agrave; la jet&eacute;e Sud.</p>
 
-          <p>
-          In addition, the Esquimalt Graving Dock has three mobile cranes&nbsp;: A <strong>30-tonne Grove RT rubber tired crane</strong>, a <strong>25-tonne rubber tired mobile crane</strong> and a <strong>10-tonne Hyster Bullmoose</strong> that is ideal for dockbottom applications. 
-          </p>
+          <p>De plus, le bassin de radoub d'Esquimalt comprend trois grues mobiles&nbsp;: une <strong>grue RT Grove de 30&nbsp;tonnes &agrave; pneus en caoutchouc</strong>, une <strong>grue mobile de 25&nbsp;tonnes &agrave; pneus en caoutchouc</strong> et une <strong>grue Hyster Bullmoose de 10&nbsp;tonnes</strong> qui est id&eacute;ale pour les applications dans le fond de la cale s&egrave;che.</p>
 
-          <p>
-          We also have 4&nbsp;tonne and 6&nbsp;tonne forklifts available to our clients.
-          </p>
+          <p>Nous poss&eacute;dons &eacute;galement des chariots &eacute;l&eacute;vateurs &agrave; fourche de 4&nbsp;et de 6&nbsp;tonnes qui sont &agrave; la disposition de nos clients.</p>
 
-          <h2>Risk Management</h2>
+          <h2>Gestion des risques</h2>
 
-          <p>
-          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that EGD maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do EGD employees work in a safe and secure environment, but also employees of the companies that operate out of the EGD facility.  
-          </p>
+          <p>Le groupe de gestion des risques travaille &agrave; r&eacute;gler les probl&egrave;mes relatifs &agrave; la s&ucirc;ret&eacute;, aux incendies, &agrave; la s&eacute;curit&eacute; et aux relations publiques. Il veille &eacute;galement &agrave; ce que le bassin de radoub d'Esquimalt maintienne sa certification en installation maritime en vertu des exigences du R&egrave;glement sur la s&ucirc;ret&eacute; du transport maritime et du Code international pour la s&ucirc;ret&eacute; des navires et des installations portuaires. Ce groupe effectue des t&acirc;ches de coordination principalement dans l'ombre afin d'aider &agrave; garantir que les employ&eacute;s du bassin de radoub d'Esquimalt, ainsi que les employ&eacute;s de compagnies travaillant &agrave; l'ext&eacute;rieur des installations du bassin de radoub d'Esquimalt, travaillent dans un environnement s&ucirc;r.</p>
 
 			</div>
 
