--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -83,7 +83,7 @@
 		<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 			Dock Dimensions
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-			</a></h1>
+			</a></h1><a name="il" id="il"></a>
 		
 		<img src="images/dimensions.gif" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" width="740"  style="width: 740px; " />
 			</div>
