--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -83,7 +83,7 @@
 		<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 			Dimensions du bassin
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-			</a></h1>
+			</a></h1><a name="il" id="il"></a>
 			
 		<img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="740" style="width: 740px; " />
 
