Remove link to PDF report

--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -96,9 +96,9 @@
 						dans les installations de la cale s&egrave;che d'Esquimalt le fasse dans
 						le respect de l'environnement, y compris en conformit&eacute; avec l'ensemble
 						de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
-						fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une <a href="../fichiers-files/ebmps-mpges.pdf">s&eacute;rie
-              d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
-              (MPGE)</a>.</p>
+            fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une s&eacute;rie
+            d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
+            (MPGE).</p>
 					<p>Les meilleures pratiques de gestion de l'environnement (MPGE)
 						constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
 						polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
