--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -100,7 +100,7 @@
 					<p>All of those conducting business at the Esquimalt Graving Dock are expected
 						to operate in an environmentally responsible manner. This includes compliance
 						with all applicable environmental regulations and standards. In support
-            of this, the Esquimalt Graving Dock has developed a <a href="../fichiers-files/ebmps-mpges.pdf">comprehensive set of Environmental Best Management Practices</a> (EBMPs).</p>
+            of this, the Esquimalt Graving Dock has developed a comprehensive set of Environmental Best Management Practices (EBMPs).</p>
 					<p><acronym title="Environmental Best Management Practices">EBMPs</acronym> are
 						ways of reducing and preventing the discharge of pollutants into the environment
 						through good housekeeping, maintenance, materials management, communications,
