Replace Environmental homepage image

--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -91,7 +91,7 @@
         <p style="text-align:center;"><em>La Cale s&egrave;che d'Esquimalt,
 				en partenariat avec l'industrie de r&eacute;partion de navires, veut &ecirc;tre
         le meilleur chantier naval de la c&ocirc; Ouest de l'Am&eacute;rique du Nord.</em></p>
-			<img src="../images/croisiere-cruise.jpg" alt="" width="250" height="212" style="float: right;" />
+			<img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
 			<p>La cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
 				de cet objectif passe obligatoirement par une gestion respectueuse de l'environnement.
 				Afin de garantir que les activit&eacute;s men&eacute;es dans ses installations
