Clean up environment links

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -135,18 +135,8 @@
       </p>
 
 			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
-				<li><a href="gestion-management-eng.html">Environmental Management</a>
-					<ul style="list-style-type:none">
-		
-						<li><a href="gestion-management-eng.html#mpge-ebmp">Environmental Best Management
-								Practices</a></li>
-						<li><a href="gestion-management-eng.html#formation-training">Training</a></li>
-						<li><a href="gestion-management-eng.html#participation">Participation and Outreach</a></li>
-						<li><a href="gestion-management-eng.html#ee-ea">Environmental Assessments</a><br />
-						</li>
-					</ul>
-				</li>
-				<li><a href="interet-interest-eng.html">Articles of Interest</a></li>
+        <li><a href="gestion-management-eng.html">Environmental Management</a></li>
+        <li><a href="interet-interest-eng.html">Articles of Interest</a></li>
 		  </ul>
 			<p>If you have any questions or concerns regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
