--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -112,18 +112,9 @@
 				des installations et de la collectivit&eacute; environnante.</p>
 			<p>L'engagement de la cale s&egrave;che d'Esquimalt envers la protection de
 				l'environnement est &eacute;nonc&eacute; dans la <a href="politique-policy-fra.html">Politique
-				environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: </p>
-			<ul style="list-style-type:none; padding-left:0; margin-left:0; font-size:90%">
-				<li><a href="gestion-management-fra.html">Gestion de l'environnement</a>
-					<ul style="list-style-type:none">
-						<li><a href="gestion-management-fra.html#mpge-ebmp">Meilleures pratiques de
-								gestion de l'environnement</a></li>
-						<li><a href="gestion-management-fra.html#formation-training">Formation</a></li>
-						<li><a href="gestion-management-fra.html#participation">Participation et information</a></li>
-						<li><a href="gestion-management-fra.html#ee-ea">&Eacute;valuation environnementale</a><br />
-						</li>
-					</ul>
-				</li>
+				environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>.</p>
+			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
+				<li><a href="gestion-management-fra.html">Gestion de l'environnement</a></li>
 				<li><a href="interet-interest-fra.html">Articles d'int&eacute;r&ecirc;t</a></li>
 			</ul>
 			<p>Si vous avez des questions ou des pr&eacute;occupations &agrave; l'&eacute;gard
