Add telephone contact number

--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -122,7 +122,8 @@
 				cale s&egrave;che d'Esquimalt, veuillez communiquer avec le coordonnateur
 				environnemental&nbsp;:</p>
 		  <p>
-				Courriel&nbsp;: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a>
+        Courriel&nbsp;: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
+        T&egrave;l&egrave;phone: 250-363-3961
 		  </p>
 	
 		</div>
