--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -143,6 +143,7 @@
 				Dock, please contact the Environmental Coordinator at:</p>
 		  <p>
 				Email: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
+			  Telephone: 250-363-3961	
 		  </p>
 
 		</div>
