Add triptych to Environmental Policy pages

--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -89,24 +89,28 @@
 			<div class="center">
 
 				<h1 id="cont">Environmental Policy Statement</h1>
-			
-					<p>
-            It is the goal of the Esquimalt Graving Dock, in partnership
-						with the ship repair industry, to be the premier
-						ship repair, construction and maintenance facility
-						on the west coast of North America.
-          </p>
-          
-					<p>
-            The Esquimalt Graving Dock and its users realize that environmental
-						management is an integral part of attaining that
-						goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001
-						Environmental management System, we are committed
-						to managing the actual and potential environmental
-						impacts of our operations.
-          </p>
+
+
+        <p>
+          It is the goal of the Esquimalt Graving Dock, in partnership
+          with the ship repair industry, to be the premier
+          ship repair, construction and maintenance facility
+          on the west coast of North America.
+        </p>
+        
+        <p>
+          The Esquimalt Graving Dock and its users realize that environmental
+          management is an integral part of attaining that
+          goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001
+          Environmental management System, we are committed
+          to managing the actual and potential environmental
+          impacts of our operations.
+        </p>
+
+        <img src="../images/dock-cale-3.jpg" alt="" />
 
 				<p>To meet our commitment we will: </p>
+
 				<ul>
 					<li>Protect the natural environment and prevent pollution.</li>
 					<li>Meet or exceed applicable federal, provincial and municipal legislation
@@ -123,7 +127,7 @@
 						in protecting the environment.</li>
 					<li>Meet the evolving needs and expectations of our industry and community
 						through the continual improvement of our systems, programs
-						and procedures.    </li>
+						and procedures.</li>
 				</ul>
 
         <img src="../images/poli-sig-eng.jpg" alt="" />
