--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -99,6 +99,7 @@
           l'environnement certifi&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
           les r&eacute;percussions que nos activit&eacute;s ont ou pourraient
           avoir sur l'environnement. </p>
+        <img src="../images/dock-cale-3.jpg" alt="" />
 				<p>Pour remplir notre engagement, nous allons&nbsp;:</p>
 				<ul>
 					<li>Prot&eacute;ger le milieu naturel et pr&eacute;venir la pollution.</li>
