wcag ca fixes, removed /ser/ pages

--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -74,7 +74,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
 			&gt;&nbsp;<a href="programme-program-eng.html">Environmental
-			Program</a> &gt; Management 
+			Program</a> &gt; Environmental Management 
 		</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
