--- a/index-fra.html
+++ b/index-fra.html
@@ -109,8 +109,8 @@
 						Travaux publics et des Services gouvernementaux du Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>).</p>
 					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24&nbsp;heures
 						sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
-						la gamme des <a href="ser/reparation-repair-fra.html">services de r&eacute;paration
-						navale</a>, avec tous les &eacute;quipements requis, notamment nos nouveaux logements
+						la gamme des services de r&eacute;paration
+						navale, avec tous les &eacute;quipements requis, notamment nos nouveaux logements
 						pour stabilisateurs facilitant les travaux d'entretien et de r&eacute;paration
 						des dispositifs de stabilisation des navires. </p>
 				</div>
