--- a/site-eng.html
+++ b/site-eng.html
@@ -95,12 +95,7 @@
 				<ul>
 					<li><a href="index-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym> Home</a></li>
 					<li><a href="emp-loc-eng.html">Location</a></li>
-					<li><a href="services-eng.html">Services</a>
-						<ul>
-							<li><a href="ser/reparation-repair-eng.html">Ship Repair Services</a></li>
-							<li><a href="ser/pompes-pumps-eng.html">Pumphouse Staff</a></li>
-						</ul>
-					</li>
+					<li><a href="services-eng.html">Services</a></li>
 
 					<li><a href="conduite-conduct-eng.html">Code of Conduct</a></li>
 					<li><a href="entreprises-firms-eng.html">Ship Repair Firms</a></li>
