--- a/index-eng.html
+++ b/index-eng.html
@@ -106,8 +106,8 @@
 			<h2>Who We Are</h2>
 			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is a branch of Public Works and Government Services Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>) &ndash; a Canadian federal government department.</p>
 			<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365&nbsp;days
-				a year. The Dock provides a full range of <a href="ser/reparation-repair-eng.html">ship
-				repair services</a> and amenities like our new stabilizer
+				a year. The Dock provides a full range of ship
+				repair services and amenities like our new stabilizer
 				pockets. </p>
 		</div>
 		<div class="option2">
