--- a/rendement-performance-eng.html
+++ b/rendement-performance-eng.html
@@ -90,8 +90,7 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Performance Standard of the Esquimalt Graving Dock, Victoria,
-					British Columbia
+					Performance Standard
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<!-- <p>Comments on this document are being solicited for the next 30 days (ending
@@ -99,7 +98,7 @@
 				at <a href="mailto:jim.milne@pwgsc.gc.ca">Jim.Milne@pwgsc.gc.ca</a></p>
 				<hr /> -->
 				<p>At the Esquimalt Graving Dock (EGD), Public Works and Government Services
-					Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>) will provide in a reasonable manner:</p>
+					Canada (PWGSC) will provide in a reasonable manner:</p>
 				<ul>
 					<li>administration services, to reserve services or space for vessels</li>
 					<li>notification of uses within 48&nbsp;hours of changes to service/space that
