--- a/site-fra.html
+++ b/site-fra.html
@@ -91,15 +91,7 @@
 				<ul>
 					<li> <a href="index-fra.html">Accueil <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
 					<li> <a href="emp-loc-fra.html">Emplacement</a></li>
-					<li> <a href="services-fra.html">Services</a>
-
-						<ul>
-							<li> <a href="ser/reparation-repair-fra.html">Services de r&eacute;paration
-									navale</a></li>
-							<li> <a href="ser/pompes-pumps-fra.html">&Eacute;quipe des services techniques
-								&amp; Personnel de cale</a>	</li>
-						</ul>
-					</li>
+					<li> <a href="services-fra.html">Services</a></li>
 
 					<li><a href="conduite-conduct-fra.html">Code de conduite</a></li>
 					<li><a href="entreprises-firms-fra.html">Entreprises de radoub</a></li>
