Removed portions of the environmental management pages

--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -86,75 +86,45 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Gestion de l'environnement
+					Meilleures pratiques de gestion
+						de l'environnement
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
-				<div style="clear:right; float: right;">
-					<h2 id="mpge-ebmp">Meilleures pratiques de gestion
-						de l'environnement</h2>
-					<p>On s'attend &agrave; ce que quiconque m&egrave;ne des activit&eacute;s
-						dans les installations de la cale s&egrave;che d'Esquimalt le fasse dans
-						le respect de l'environnement, y compris en conformit&eacute; avec l'ensemble
-						de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
-            fin, la Cale s&egrave;che d'Esquimalt a &eacute;labor&eacute; une s&eacute;rie
-            d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
-            (MPGE).</p>
-					<p>Les meilleures pratiques de gestion de l'environnement (MPGE)
-						constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
-						polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
-						d'entretien, de maintenance, de gestion du mat&eacute;riel, de communications
-						et de travail et &agrave; la technologie. La plupart des <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym> sont
-						une forme de contr&ocirc;le &agrave; la source &agrave; des fins de pr&eacute;vention
-						de la pollution, et leur mise en &#339;uvre peut r&eacute;duire au minimum
-						les d&eacute;chets et la pollution provenant d'activit&eacute;s comme l'enl&egrave;vement
-						de la peinture et la pr&eacute;paration de surface, le peinturage, l'entretien
-						de moteurs et la manutention de mat&eacute;riaux. </p>
-					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="" width="402" height="131" /></div>
-					<p>Pour Consulter une fiche r&eacute;capitulative des <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>.</p>
-					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Haut de la page</a> </div>
-				</div>
-				<br />
-				<div style="float: left; clear:right;">
-					<h2 id="formation-training">Formation et sensibilisation</h2>
-					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" alt="" width="150" height="181" /><br />
-						Employ&eacute;s de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> discutant
-						des m&eacute;thodes d'intervention en cas de d&eacute;versement</div>
-					<p>Les employ&eacute;s de la cale s&egrave;che d'Esquimalt re&ccedil;oivent
-						une formation dans certains domaines, y compris sur la sant&eacute; et
-						s&eacute;curit&eacute;, les interventions en cas de d&eacute;versement,
-						la manutention des mati&egrave;res/d&eacute;chets dangereux, la sensibilisation &agrave; l'environnement
-						et sure d'autres exigences propres &agrave; leur poste.</p>
-					<p>Les employ&eacute;s de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> doivent &eacute;galement
-						bien conna&icirc;tre les meilleures pratiques de gestion de l'environnement
-						(MPGE)
-						se rapportant &agrave; leur travial.</p>
-					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-						Haut de la page</a> </div>
-				</div>
-				<br />
-        <h2 id="participation">Participation et information</h2>
-        <div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="" width="200" height="150" /><br />
-          &Eacute;quipe de la Semaine v&eacute;lo-boulot de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de&nbsp;2004</div>
-        <p>La cale s&egrave;che d'Esquimalt participe &agrave; des activit&eacute;s
-          d'information et d'&eacute;ducation, comme des visites &eacute;ducatives,
-          la Semaine v&eacute;lo-boulot du Grand Victoria et le Programme de passeport
-          d'&eacute;cocivisme de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> pour promouvoir la sensibilisation &agrave; l'environnement.</p>
-        <br style="clear: both" />
-        <div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-          Haut de la page</a> </div>
-				<br />
-				<div style="clear:right;">
-					<h2 id="ee-ea">&Eacute;valuation environnementale (EE)</h2>
-					<img src="../images/construct.jpg" alt="" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
-					<p>Tous les nouveaux projets de construction &agrave; la cale s&egrave;che
-						d'Esquimalt doivent &ecirc;tre &eacute;valu&eacute;s pour d&eacute;terminer
-						s'ils doivent faire l'objet d'un examen en vertu de la <i>Loi canadienne
-						sur l'&eacute;valuation environnementale</i> (LCEE).
-						Lorsqu'une &eacute;valuation environnementale est n&eacute;cessaire, un
-						plan d'action est &eacute;labor&eacute; afin de g&eacute;rer toute r&eacute;percussion
-						que pourrait avoir un projet sur l'environnement.</p>
-				</div>
+        </h1>
+
+        <p>
+          On s'attend &agrave; ce que quiconque m&egrave;ne des activit&eacute;s
+          dans les installations de la cale s&egrave;che d'Esquimalt (CSE) le fasse dans
+          le respect de l'environnement, y compris en conformit&eacute; avec l'ensemble
+          de la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
+          fin, <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> a &eacute;labor&eacute; une s&eacute;rie
+          d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
+          (MPGE).
+        </p>
+
+        <p>
+          Les meilleures pratiques de gestion de l'environnement (MPGE)
+          constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
+          polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
+          d'entretien, de maintenance, de gestion du mat&eacute;riel, de communications
+          et de travail et &agrave; la technologie. La plupart des 
+          <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym> sont
+          une forme de contr&ocirc;le &agrave; la source &agrave; des fins de pr&eacute;vention
+          de la pollution, et leur mise en &#339;uvre peut r&eacute;duire au minimum
+          les d&eacute;chets et la pollution provenant d'activit&eacute;s comme l'enl&egrave;vement
+          de la peinture et la pr&eacute;paration de surface, le peinturage, l'entretien
+          de moteurs et la manutention de mat&eacute;riaux. 
+        </p>
+
+        <p>
+          Pour obtenir une copie des meilleures pratiques de gestion de l'environnement de la 
+          <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>, veuillez 
+          communiquer avec le coordonnateur environnemental&nbsp;:
+        </p>
+
+        <p>
+          Email: <a href="mailto:melissa.piasta@tpsgc-pwgsc.gc.ca">melissa.piasta@tpsgc-pwgsc.gc.ca</a><br />
+          Telephone: 250-363-3961	
+        </p>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
