--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -135,17 +135,20 @@
       </p>
 
 			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
-        <li><a href="gestion-management-eng.html">Environmental Management</a></li>
+        <li><a href="gestion-management-eng.html">Environmental Best Management Practices</a></li>
         <li><a href="interet-interest-eng.html">Articles of Interest</a></li>
 		  </ul>
-			<p>If you have any questions or concerns regarding
+
+      <p>
+        If you have any questions or concerns regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
-				Dock, please contact the Environmental Coordinator at:</p>
+        Dock, please contact the Environmental Coordinator at:
+      </p>
+
 		  <p>
 				Email: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
 			  Telephone: 250-363-3961	
 		  </p>
-
 		</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
