--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -87,45 +87,61 @@
 				<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 				Programme environnemental
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-				</h1>
-        <p style="text-align:center;"><em>La Cale s&egrave;che d'Esquimalt,
-				en partenariat avec l'industrie de r&eacute;partion de navires, veut &ecirc;tre
-        le meilleur chantier naval de la c&ocirc; Ouest de l'Am&eacute;rique du Nord.</em></p>
-			<img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
-			<p>La cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
+      </h1>
+
+      <p style="text-align:center;">
+        <em>La Cale s&egrave;che d'Esquimalt,
+        en partenariat avec l'industrie de r&eacute;partion de navires, veut &ecirc;tre
+        le meilleur chantier naval de la c&ocirc; Ouest de l'Am&eacute;rique du Nord.</em>
+      </p>
+
+      <img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
+
+      <p>
+        La cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
 				de cet objectif passe obligatoirement par une gestion respectueuse de l'environnement.
 				Afin de garantir que les activit&eacute;s men&eacute;es dans ses installations
 				s'effectuent dans le respect de l'environnement, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
 				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>)
 				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001
-				concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.</p>
+        concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.
+      </p>
 
       <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</h2>
 
-			<p>Depuis sa certification en&nbsp;2001, ce syst&egrave;me de gestion de l'environnement
+      <p>
+        Depuis sa certification en&nbsp;2001, ce syst&egrave;me de gestion de l'environnement
 				a servi &agrave; encadrer la mise en &#339;uvre d'initiatives et de programmes
 				environnementaux fructueux et rentables. Ces programmes contribuent &agrave; garantir
 				que les entreprises ouvrant dans nos installations effectuent leurs travaux
 				de mani&egrave;re consciencieuse, en r&eacute;duisant les r&eacute;percussions
 				sur l'environnement et en faisant montre de consid&eacute;ration pour la
 				sant&eacute;, la s&eacute;curit&eacute; et le bien-&ecirc;tre des usagers
-				des installations et de la collectivit&eacute; environnante.</p>
-			<p>L'engagement de la cale s&egrave;che d'Esquimalt envers la protection de
+        des installations et de la collectivit&eacute; environnante.
+      </p>
+
+      <p>
+        L'engagement de la cale s&egrave;che d'Esquimalt envers la protection de
 				l'environnement est &eacute;nonc&eacute; dans la <a href="politique-policy-fra.html">Politique
-				environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>.</p>
+          environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>.
+      </p>
+
 			<ul style="list-style-type:none; padding-left:0; margin-left:0;">
-				<li><a href="gestion-management-fra.html">Gestion de l'environnement</a></li>
+				<li><a href="gestion-management-fra.html">Meilleures pratiques de gestion de l'environnement</a></li>
 				<li><a href="interet-interest-fra.html">Articles d'int&eacute;r&ecirc;t</a></li>
-			</ul>
-			<p>Si vous avez des questions ou des pr&eacute;occupations &agrave; l'&eacute;gard
+      </ul>
+
+      <p>
+        Si vous avez des questions ou des pr&eacute;occupations &agrave; l'&eacute;gard
 				de la Politique environnementale ou des programmes environnementaux de la
 				cale s&egrave;che d'Esquimalt, veuillez communiquer avec le coordonnateur
-				environnemental&nbsp;:</p>
+        environnemental&nbsp;:
+      </p>
+
 		  <p>
         Courriel&nbsp;: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
         T&egrave;l&egrave;phone: 250-363-3961
 		  </p>
-	
 		</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
