Fix up environmental pages a bit more

--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -102,7 +102,7 @@
         </p>
 
         <p>
-          Les meilleures pratiques de gestion de l'environnement (MPGE)
+          Les <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>
           constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
           polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
           d'entretien, de maintenance, de gestion du mat&eacute;riel, de communications
@@ -122,8 +122,8 @@
         </p>
 
         <p>
-          Email: <a href="mailto:melissa.piasta@tpsgc-pwgsc.gc.ca">melissa.piasta@tpsgc-pwgsc.gc.ca</a><br />
-          Telephone: 250-363-3961	
+          Courriel&nbsp;: <a href="mailto:melissa.piasta@tpsgc-pwgsc.gc.ca">melissa.piasta@tpsgc-pwgsc.gc.ca</a><br />
+          T&egrave;l&egrave;phone&nbsp;: 250-363-3961
         </p>
 			</div>
 
