--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -110,6 +110,24 @@
       <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</h2>
 
       <p>
+        La certification <acronym title="Organisation internationale de normailisation">IS0</acronym> 14001
+        est un norme internationale concerant l'&eacute;laboration et la mise en &#339;uvre
+        d'un syst&egrave;me de gestion de l'environnement (SGE).
+        Admissible &agrave; cette certification en 2001, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
+        mis en &#339;uvre ce syst&egrave;me de gestion afin de l'aider &agrave; cerner
+        les probl&egrave;mes environnementaux dans ses installations et &agrave; &eacute;tablir
+        un ordre de priorit&eacute; &agrave; cet &eacute;gard.
+      </p>
+
+      <p>
+        En adoptant la <a href="politique-policy-fra.html">Politique environnementale</a> de
+        la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>, la haute
+        direction s'est engag&eacute;e &agrave; pr&eacute;venir la pollution, &agrave; prot&eacute;ger
+        le milieu naturel et &agrave; respecter la r&eacute;glementation et les
+        normes environnementales applicables.
+      </p>
+
+      <p>
         Depuis sa certification en&nbsp;2001, ce syst&egrave;me de gestion de l'environnement
 				a servi &agrave; encadrer la mise en &#339;uvre d'initiatives et de programmes
 				environnementaux fructueux et rentables. Ces programmes contribuent &agrave; garantir
@@ -139,8 +157,8 @@
       </p>
 
 		  <p>
-        Courriel&nbsp;: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
-        T&egrave;l&egrave;phone: 250-363-3961
+        Courriel&nbsp;: <a href="mailto:melissa.piasta@tpsgc-pwgsc.gc.ca">melissa.piasta@tpsgc-pwgsc.gc.ca</a><br />
+        T&egrave;l&egrave;phone&nbsp;: 250-363-3961
 		  </p>
 		</div>
 
