--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -119,9 +119,9 @@
         </p>
 
         <p>
-        Courriel&nbsp;: <a href="mailto:melissa.piasta@tpsgc-pwgsc.gc.ca">melissa.piasta@tpsgc-pwgsc.gc.ca</a><br />
-        T&egrave;l&egrave;phone: 250-363-3961
-		  </p>
+          Email: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
+          Telephone: 250-363-3961	
+        </p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
