Change article dates

--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -140,7 +140,7 @@
 					the most environmentally-friendly services. And, thanks to
 					<acronym title="Public Works and Government Services Canada">PWGSC</acronym>, the Esquimalt Graving Dock will be one of the best
 					options.</p>
-				<p><em>Source: Ensemble, Volume&nbsp;8, No.&nbsp;5&nbsp;2007</em></p>
+				<p><em>Source: Ensemble, July 2000, Volume&nbsp;8</em></p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
