--- a/env/voie-way-fra.html
+++ b/env/voie-way-fra.html
@@ -107,7 +107,7 @@
 				<p>M. Lawes reconna&icirc;t que l'obtention de la certification n&eacute;cessite un travail colossal, mais il croit qu'il s'agit d'une d&eacute;cision sens&eacute;e sur le plan administratif. La protection de l'environnement, &eacute;videmment, constitue le principal avantage. La cale s&egrave;che est entour&eacute;e de quartiers r&eacute;sidentiels et elle veut avoir de bons rapports avec ses voisins. De plus, la certification <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001 am&eacute;liorera l'assurance de la conformit&eacute; aux lois; <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym> sera mieux &agrave; m&ecirc;me de garantir que les activit&eacute;s de la cale s&egrave;che respectent toutes ses obligations juridiques.</p>
 
 				<p>Le syst&egrave;me environnemental rendra &eacute;galement la cale s&egrave;che plus concurrentielle. En effet, de nombreuses soci&eacute;t&eacute;s maritimes, et en particulier les op&eacute;rateurs de navires de croisi&egrave;re, veulent obtenir des services aussi &eacute;cologiques que possible. Et gr&acirc;ce &agrave; <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>, la cale s&egrave;che d'Esquimalt constituera d&eacute;sormais pour elles un des meilleurs choix.</p>
-				<p><em>Source&nbsp;: Ensemble, volume&nbsp;8, no&nbsp;5</em></p>
+				<p><em>Source&nbsp;: Ensemble, juillet 2000, volume&nbsp;8, no&nbsp;5</em></p>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
